file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_audio STATIC ${SOURCES})
    target_include_directories(zxnext_audio PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(zxnext_audio INTERFACE)
    target_include_directories(zxnext_audio INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
