file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(jnext_audio STATIC ${SOURCES})
    target_include_directories(jnext_audio PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(jnext_audio INTERFACE)
    target_include_directories(jnext_audio INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
