file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_input STATIC ${SOURCES})
    target_include_directories(zxnext_input PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(zxnext_input INTERFACE)
    target_include_directories(zxnext_input INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
