file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_input STATIC ${SOURCES})
    target_include_directories(zxnext_input PUBLIC ${CMAKE_SOURCE_DIR}/src)
    find_package(SDL2 REQUIRED)
    target_link_libraries(zxnext_input PUBLIC SDL2::SDL2 spdlog::spdlog)
else()
    add_library(zxnext_input INTERFACE)
    target_include_directories(zxnext_input INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
