file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_peripheral STATIC ${SOURCES})
    target_include_directories(zxnext_peripheral PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(zxnext_peripheral INTERFACE)
    target_include_directories(zxnext_peripheral INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
