file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(jnext_peripheral STATIC ${SOURCES})
    target_include_directories(jnext_peripheral PUBLIC ${CMAKE_SOURCE_DIR}/src)
    target_link_libraries(jnext_peripheral PUBLIC spdlog::spdlog)
else()
    add_library(jnext_peripheral INTERFACE)
    target_include_directories(jnext_peripheral INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
