file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_save STATIC ${SOURCES})
    target_include_directories(zxnext_save PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(zxnext_save INTERFACE)
    target_include_directories(zxnext_save INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
