file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(zxnext_video STATIC ${SOURCES})
    target_include_directories(zxnext_video PUBLIC ${CMAKE_SOURCE_DIR}/src)
else()
    add_library(zxnext_video INTERFACE)
    target_include_directories(zxnext_video INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
