file(GLOB_RECURSE SOURCES "*.cpp")
if(SOURCES)
    add_library(jnext_video STATIC ${SOURCES})
    target_include_directories(jnext_video PUBLIC ${CMAKE_SOURCE_DIR}/src)
    target_link_libraries(jnext_video PUBLIC spdlog::spdlog)
else()
    add_library(jnext_video INTERFACE)
    target_include_directories(jnext_video INTERFACE ${CMAKE_SOURCE_DIR}/src)
endif()
